# rustpos

./: .gitignore  Cargo.toml  Dockerfile  build.ps1  build.sh  dev.ps1  dev.sh  logo.xcf  readme.md
.github/workflows/: build-deb.yml
backend/: Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: main.rs  printer.rs
common/: Cargo.toml
common/src/: lib.rs  printer.rs  protocol.rs
data/: pos.db
debian/: build-deb.sh  build-printclient-deb.sh  postinst  postrm  prerm  printclient-postinst  printclient-postrm  printclient-prerm  rustpos-printclient.service  rustpos.service
frontend/: Cargo.toml  Trunk.toml
frontend/locales/: af.json  am.json  ar.json  cs.json  de.json  en.json  es.json  fr.json  ha.json  hi.json  hu.json  it.json  pl.json  pt.json  ro.json  sw.json  uk.json  yo.json
frontend/src/: app.rs  i18n.rs  lib.rs  main.rs  menu_pdf.rs  models.rs  printer.rs  server_fns.rs
frontend/src/pages/: admin.rs  categories.rs  customer_groups.rs  display.rs  items.rs  keyboard.rs  kitchen.rs  login.rs  mod.rs  reports.rs  sale.rs  setup.rs  transactions.rs
frontend/style/: main.css
niri/: config.kdl
printclient/: Cargo.toml  printclient.toml
printclient/src/: main.rs
site/pkg/: rustpos.css  rustpos.d.ts  rustpos.js  rustpos_bg.wasm.d.ts
wix/: build-msi.ps1  printclient.wxs  rustpos.wxs
