[package]
name = "rustpos-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
anyhow = "1.0.100"
thiserror = "2.0.18"
glob = "0.3.3"
recibo = { version = "0.3.0", features = ["graphics"] }
serialport = "4.7.3"