[package]
name = "rustpos-common"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
recibo = { version = "0.3.0", features = ["graphics"] }
glob = "0.3"
serialport = "4.9"
base64 = "0.22"
