[package]
name = "rustpos"
version = "1.4.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.19" }
leptos_router = "0.8.13"
leptos_meta = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }

# SSR dependencies
leptos_axum = { version = "0.8", optional = true }
axum = { version = "0.8.8", features = ["macros", "ws"], optional = true }
tokio = { version = "1.51.0", features = ["full"], optional = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "uuid", "chrono"], optional = true }
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.8", features = ["fs"], optional = true }
thiserror = { version = "2.0.18", optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.23", optional = true }
rustpos-common = { path = "../common", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8", optional = true }
sha2 = { version = "0.11", optional = true }
if-addrs = { version = "0.13", optional = true }

# Hydrate dependencies
# Pinned exactly: the generated JS bindings must match the wasm-bindgen CLI version.
wasm-bindgen = { version = "=0.2.122", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.97", optional = true, features = [
    "File", "FileList", "FileReader", "HtmlInputElement", "HtmlCanvasElement",
    "HtmlImageElement", "CanvasRenderingContext2d", "HtmlAnchorElement", "Window",
    "WebSocket", "MessageEvent", "CloseEvent", "Location",
] }
js-sys = { version = "0.3.97", optional = true }
# Menu PDF generation (SSR only). printpdf supplies the PDF writer; `font_subsetting`
# embeds only the glyphs actually used so the bundled Noto Sans doesn't bloat every
# PDF. `image` decodes item/logo images to raw RGB, `ttf-parser` measures text.
printpdf = { version = "0.7", default-features = false, features = ["font_subsetting"], optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"], optional = true }
ttf-parser = { version = "0.25.1", default-features = false, features = ["std"], optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:web-sys",
    "dep:js-sys",
    "chrono/wasmbind",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos/nonce",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:sqlx",
    "dep:tower",
    "dep:tower-http",
    "dep:thiserror",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:rustpos-common",
    "dep:base64",
    "dep:rand",
    "dep:sha2",
    "dep:if-addrs",
    "dep:printpdf",
    "dep:image",
    "dep:ttf-parser",
    "uuid/v4",
]


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
