[package]
name = "rustpos-printclient"
version = "1.1.0"
edition = "2024"

[dependencies]
rustpos-common = { path = "../common" }
tokio = { version = "1.51", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
base64 = "0.22"
